# aws-text-to-speech

./: Makefile  README.md  pyproject.toml
.github/workflows/: serverless-job.yml
cdk/: setup.py
cdk/my_service/: constants.py  consumer.py  db.py  producer.py  service_stack.py
service/dal/: polly_handler.py
service/handlers/: consumer.py
service/handlers/schemas/: env_vars.py
service/logic/: consume_text.py  email.py
tests/: utils.py
tests/integration/: test_consumer.py
text/: input.txt
